# portal-gphotos

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ramnat/portalgphotos/: BootReceiver.kt  LogUtils.kt  MainActivity.kt  MainViewModel.kt  PhotoDreamService.kt  ScreensaverGuard.kt
app/src/main/java/com/ramnat/portalgphotos/data/: AppSettings.kt  Downloader.kt  MediaCache.kt  Models.kt  OnDeviceAuth.kt  PickerClient.kt  TokenStore.kt  WeatherClient.kt
app/src/main/java/com/ramnat/portalgphotos/ui/: Qr.kt  Screens.kt
app/src/main/res/drawable/: ic_weather_clear_night.xml  ic_weather_cloudy.xml  ic_weather_fog.xml  ic_weather_partly_cloudy.xml  ic_weather_rain.xml  ic_weather_snow.xml  ic_weather_sunny.xml  ic_weather_thunder.xml
app/src/main/res/layout/: video_player_view.xml
app/src/main/res/values/: strings.xml  themes.xml
auth-helper/: pyproject.toml
auth-helper/src/portal_auth/: __init__.py  ambient_probe.py  cli.py  oauth.py
auth-helper/tests/: test_ambient_probe.py  test_cli.py  test_oauth.py
scripts/: deploy.ps1  deploy.sh
